--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@types/node": "18.15.3",
@@ -20,8 +22,19 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-rc.5",
+    "@storybook/addon-interactions": "^7.0.0-rc.5",
+    "@storybook/addon-links": "^7.0.0-rc.5",
+    "@storybook/addon-styling": "^0.3.1",
+    "@storybook/blocks": "^7.0.0-rc.5",
+    "@storybook/nextjs": "^7.0.0-rc.5",
+    "@storybook/react": "^7.0.0-rc.5",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "autoprefixer": "^10.4.14",
+    "eslint-plugin-storybook": "^0.6.11",
     "postcss": "^8.4.21",
+    "postcss-loader": "^7.1.0",
+    "storybook": "^7.0.0-rc.5",
     "tailwindcss": "^3.2.7"
   }
 }
