--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "jest-environment-jsdom": "^29.5.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,8 +34,10 @@
     "@storybook/nextjs": "^7.0.0-rc.5",
     "@storybook/react": "^7.0.0-rc.5",
     "@storybook/testing-library": "^0.0.14-next.1",
+    "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.14",
     "eslint-plugin-storybook": "^0.6.11",
+    "jest": "^29.5.0",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.1.0",
     "storybook": "^7.0.0-rc.5",
