--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "^29.5.0",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.1.0",
+    "react-hook-form": "^7.43.7",
     "storybook": "^7.0.0-rc.5",
     "tailwindcss": "^3.2.7"
   }
