--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "plop": "plop"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -38,6 +39,7 @@
     "autoprefixer": "^10.4.14",
     "eslint-plugin-storybook": "^0.6.11",
     "jest": "^29.5.0",
+    "plop": "^3.1.2",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.1.0",
     "react-hook-form": "^7.43.7",
