✨ Project Row component created

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "cSpell.words": [
     "autodocs",
+    "munsell",
+    "verticaldots",
     "Xata",
     "Xatabase"
   ]
