--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "eslint . --fix",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest --watch",
@@ -15,6 +16,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -35,13 +37,14 @@
     "@storybook/nextjs": "^7.0.0-rc.5",
     "@storybook/react": "^7.0.0-rc.5",
     "@storybook/testing-library": "^0.0.14-next.1",
-    "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.14",
+    "eslint-config-wesbos": "^3.2.3",
     "eslint-plugin-storybook": "^0.6.11",
     "jest": "^29.5.0",
     "plop": "^3.1.2",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.1.0",
+    "prettier": "2.8.6",
     "react-hook-form": "^7.43.7",
     "storybook": "^7.0.0-rc.5",
     "tailwindcss": "^3.2.7"
