--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.8.5",
     "jest-environment-jsdom": "^29.5.0",
     "next": "13.2.4",
     "react": "18.2.0",
