--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "cSpell.words": [
     "autodocs",
+    "Cloudinary",
     "munsell",
     "Raae",
     "signup",
